SEAMCRON-20: @Every triggers should fire on the hour/minute/second. Included long-running test which can be executed manually using 'mvn clean install -Plongtests -Pweld-se-embedded-11'.