@@ -71,9 +71,6 @@
                     <includes>
                         <include>**/**/*Test.java</include>
                     </includes>
-                    <excludes>
-                        <exclude>**/**/*LongTest.java</exclude>
-                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
@@ -331,6 +328,39 @@
         </profile>
         
         <!-- Testing Profiles -->
+        <profile>
+            <id>longtests</id>
+            <activation>
+                <property>
+                    <name>longtests</name>
+                </property>
+            </activation>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>2.0.2</version>
+                        <configuration>
+                            <source>1.5</source>
+                            <target>1.5</target>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>-client -Xmx896m -XX:MaxPermSize=192m</argLine>
+                            <forkMode>once</forkMode>
+                            <includes>
+                                <include>**/**/*TestLong.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        
         <profile>
             <id>weld-se-embedded-11</id>
             <activation>
